src/snapshots/jjpwrgem__cli__tests__empty_input.snap
---
source: src/cli.rs
expression: annotated
---
error: expected json value, found no significant characters
 --> stdin:1:1
  |
1 |
  | ^
  |
help: insert a placeholder value
  |
1 |  "rust is a must"
  |
